rename to skada

--- a/examples/sleep_staging.ipynb
+++ b/examples/sleep_staging.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "from braindecode.models import SleepStagerChambon2018\n",
     "\n",
-    "from da_toolbox.deepda import DeepCORAL, DeepJDOT, BaseDANetwork\n",
+    "from skada.deepda import DeepCORAL, DeepJDOT, BaseDANetwork\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "%matplotlib inline"
