--- a/examples/toy_example.ipynb
+++ b/examples/toy_example.ipynb
@@ -21,8 +21,8 @@
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "from da_toolbox.utils import NeuralNetwork, CustomDataset\n",
-    "from da_toolbox.deepda import DeepCORAL, DeepJDOT, BaseDANetwork\n",
+    "from skada.utils import NeuralNetwork, CustomDataset\n",
+    "from skada.deepda import DeepCORAL, DeepJDOT, BaseDANetwork\n",
     "%matplotlib inline\n"
    ]
   },
